k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clouddrop
  labels:
    app: clouddrop
spec:
  type: ClusterIP
  selector:
    app: clouddrop
  ports:
    - name: http
      port: 80
      targetPort: http
